<resources>
    <string name="app_name">eXert WMS</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="error_username_empty">Please enter User name</string>
    <string name="error_username_invalid">Please enter valid User name</string>
    <string name="error_password_empty">Please enter Password</string>
    <string name="error_password_invalid">Please enter valid Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Logout</string>
    <string name="error_login_message">Login failed, Please try again!</string>
    <string name="error_user_id_message">Unable to get User Id</string>
    <string name="error_period_id_message">Unable to get Period Id</string>
    <string name="error_api_access_message">Unable to access the server, Please try again!</string>
    <string name="error_get_items_message">Unable to get Items</string>
    <string name="error_warehouse_serials_nos_message">Unable to get Items</string>
    <string name="error_failed_warehouse_serials_nos_message">Failed to get Items</string>
    <string name="item_stocks">Item Stocks</string>
    <string name="item_stock_status">Item Stock Status</string>
    <string name="warehouse_status">Warehouse Stock</string>
    <string name="emptyString" />
    <string name="item_part_code">Item Part Code</string>
    <string name="item_part_code_hint">Enter Item Part Code</string>
    <string name="retuning_quantity_hint">Enter/Select Returning Quantity</string>
    <string name="error_item_part_code">Please select Item Part Code</string>
    <string name="item_serial_no">Item Serial Number</string>
    <string name="item_serial_no_hint">Enter Item Serial Number</string>
    <string name="error_item_serial_no">Please select Item Serial Number</string>
    <string name="item_name_english">Item Name (English)</string>
    <string name="item_name_arabic">Item Name (Arabic)</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="stock">Stock</string>
    <string name="system_stock">System Stock</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="ordered_quantity">Ordered Quantity</string>
    <string name="item_name">Item Name</string>
    <string name="part_code">Part Code</string>
    <string name="total_stock">Total Stock</string>
    <string name="warehouse">Warehouse</string>
    <string name="fromWarehouse">From Warehouse</string>
    <string name="toWarehouse">To Warehouse</string>
    <string name="transfer_out_no">Transfer Out No.</string>
    <string name="warehouse_list">Warehouse List</string>
    <string name="serial_nos_list">Item Serial Numbers List</string>
    <string name="view">VIEW</string>
    <string name="error_quantity_empty_message">Quantity should not empty or 0</string>
    <string name="error_item_partcode_serial_no_empty_message">Please enter Item Part code or Serial number</string>
    <string name="error_item_serial_no_message">Please enter Item Serial number or scan barcode</string>
    <string name="error_item_part_code_message">Please enter Item Part code or scan barcode</string>
    <string name="manufacture_date">Manufacture Date</string>
    <string name="warranty_period">Warranty Period</string>
    <string name="serial_no">Serial No</string>
    <string name="items_list">Items List</string>
    <string name="stock_adjustment">Stock Adjustment</string>
    <string name="item_adjustment">Item Adjustment</string>
    <string name="item_transfer_in">Item TransferIn</string>
    <string name="item_transfer_out">Item TransferOut</string>
    <string name="item_delivery_receipt">Item Delivery Receipt</string>
    <string name="item_goods_received">Item Goods Received</string>
    <string name="item_delivery_note">Item Material Delivery</string>
    <string name="item_material_delivery">Item Delivery Note</string>
    <string name="item_reconciliation">Item Reconciliation</string>
    <string name="item_purchase_return">Item Purchase Return</string>
    <string name="item_sales_return">Item Sales Return</string>
    <string name="quantity_adjustment">Quantity Adjustment</string>
    <string name="quantity_reconciliation">Quantity Reconciliation</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="select_to_warehouse">Select To Warehouse</string>
    <string name="select_from_warehouse">Select From Warehouse</string>
    <string name="select_transfer_out_no">Select Transfer Out Number</string>
    <string name="select_sales_invoice_no">Select Sales Invoice Number</string>
    <string name="select_sales_order_confirmation_no">Select Sales Order Confirmation Number</string>
    <string name="select_purchase_invoice_no">Select Purchase Invoice Number</string>
    <string name="select_warranty_period">Select Warranty Period</string>
    <string name="update">Update</string>
    <string name="adjustment_type">Adjustment type</string>
    <string name="positive">+ve</string>
    <string name="negative">-ve</string>
    <string name="adjustment_quantity">Adjustment Quantity</string>
    <string name="adjustment_total_cost">Adjustment Total Cost</string>
    <string name="item_saved_message">Item is saved successfully</string>
    <string name="cost">Cost</string>
    <string name="location_empty_message">"Please select Location from the list"</string>
    <string name="delivery_note_item_empty_message">"Please select Material delivery item from the list"</string>
    <string name="warehouse_empty_message">"Please select Warehouse from the list"</string>
    <string name="warehouse_from_to_empty_message">"Please select FromWarehouse and ToWarehouse from the list"</string>
    <string name="warehouse_list_empty_message">"Warehouse are not available"</string>
    <string name="sales_invoice_list_empty_message">"Sales Invoices are not available"</string>
    <string name="purchase_invoice_list_empty_message">"Purchase Invoices are not available"</string>
    <string name="vendors_list_empty_message">"Vendors are not available"</string>
    <string name="customers_list_empty_message">"Customers are not available"</string>
    <string name="branches_list_empty_message">"Branches are not available"</string>
    <string name="adjustment_type_empty_message">"Please select Adjustment Type to get list"</string>
    <string name="invalid_details_message">"Please enter valid details"</string>
    <string name="error_warehouse_empty_message">"Serial Items are empty"</string>
    <string name="login_error">Login error</string>
    <string name="login_error_message">Unauthorized! Please enter valid user credentials</string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_message">Sorry, Your session has been expired. Please login again!</string>
    <string name="ok">OK</string>
    <string name="empty_items_list">Item is not available</string>
    <string name="item_details">Item Details</string>
    <string name="check_serial_items_empty_message">Please select Items to save</string>
    <string name="serial_items_empty_message">Serial items are empty</string>
    <string name="add">Add</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="add_serial_no">Add Serial No</string>
    <string name="error_manufacturer_empty_message">Please select Manufacture Date</string>
    <string name="error_warranty_empty_message">Please select Warranty Period from list</string>
    <string name="error_serial_number_empty_message">Please enter valid Serial Number</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_question">FORGOT PASSWORD?</string>
    <string name="forgot_password_message">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="remember_password">Remember Password? Login</string>
    <string name="enter_username_or_email">Enter your Email Id</string>
    <string name="create_new_password">CREATE NEW PASSWORD</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_new_password_empty">Please enter New Password</string>
    <string name="error_confirm_password_empty">Please enter Confirm Password</string>
    <string name="error_new_confirm_password_not_equal">New Password and Confirm Password should be same</string>
    <string name="error_email_or_username_empty">Please enter your Email Id</string>
    <string name="error_invalid_email_id">Please enter valid Email Id</string>
    <string name="log_in">LOG IN</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="notifications">Notifications</string>
    <string name="hello">Hello,</string>
    <string name="user_name">%s!</string>
    <string name="stock_reconciliation">Stock Reconciliation</string>
    <string name="transfer_out">Transfer Out</string>
    <string name="transfer_in">Transfer In</string>
    <string name="delivery_receipt">Delivery Receipt</string>
    <string name="goods_received">Goods Received</string>
    <string name="delivery_note">Delivery Note</string>
    <string name="material_delivery">Material Delivery</string>
    <string name="purchase_return">Purchase Return</string>
    <string name="sales_return">Sales Return</string>
    <string name="transactions">Transactions</string>
    <string name="semicolon">:</string>
    <string name="location">Location</string>
    <string name="settings">Settings</string>
    <string name="empty" />
    <string name="quantity">Qty</string>
    <string name="quantity_full">Quantity</string>
    <string name="quantity_received">Quantity Received</string>
    <string name="returned_quantity">Returned Quantity</string>
    <string name="returning_quantity">Returning Quantity</string>
    <string name="select_location">Select Location</string>
    <string name="error_quantity_message">Please enter Quantity</string>
    <string name="error_stock_reconciliation_add_more">You cannot add more than difference of quantity and system stock</string>
    <string name="success_save_stock_adjustment">Updated Stock adjustment items successfully</string>
    <string name="error_save_stock_adjustment_items">Failed to save Stock adjustment items. Please try again!</string>
    <string name="success_save_stock_reconciliation">Updated Stock reconciliation items successfully</string>
    <string name="error_save_stock_reconciliation_items">Failed to save Stock reconciliation items. Please try again!</string>
    <string name="error_save_transfer_in_items">Failed to update Transfer In items. Please try again!</string>
    <string name="success_save_transfer_in">Updated Transfer In items successfully</string>
    <string name="error_save_transfer_out_items">Failed to update Transfer out items. Please try again!</string>
    <string name="success_save_transfer_out">Updated Transfer Out items successfully</string>
    <string name="error_save_delivery_receipt_items">Failed to update Goods received items. Please try again!</string>
    <string name="error_save_delivery_notes_items">Failed to update Material delivery items. Please try again!</string>
</resources>