<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/addItemTitleTV"
                style="@style/TextViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/add_item"
                android:textColor="@color/blue"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="@dimen/margin_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:id="@+id/manufactureDateTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/manufacture_date"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addItemTitleTV" />

            <EditText
                android:id="@+id/manufactureDateEditText"
                style="@style/EditTextEnabledStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:hint="@string/dd_mm_yyyy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manufactureDateTV" />

            <TextView
                android:id="@+id/warrantyPeriodTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/warranty_period"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/manufactureDateEditText" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/warrantyPeriodSpinnerLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warrantyPeriodTV">

                <Spinner
                    android:id="@+id/warrantyPeriodSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:dropDownWidth="match_parent"
                    android:overlapAnchor="false"
                    android:popupBackground="@drawable/edittext_rectangle_bg"
                    android:popupElevation="15dp"
                    android:theme="@style/Spinner"
                    app:layout_constraintBottom_toBottomOf="@+id/warrantyPeriodSpinnerTV"
                    app:layout_constraintTop_toTopOf="@+id/warrantyPeriodSpinnerTV" />

                <TextView
                    android:id="@+id/warrantyPeriodSpinnerTV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_rectangle_bg"
                    android:drawablePadding="@dimen/margin_10dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/select_warranty_period"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_arrow_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/serialNoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warrantyPeriodSpinnerLayout">

                <TextView
                    android:id="@+id/serialNoLabel"
                    style="@style/TextViewLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serial_no"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/serialNoEditText"
                    style="@style/EditTextEnabledStyle"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/add_serial_no"
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                    android:inputType="text"
                    android:maxLength="50"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/serialNoLabel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addStockItemButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textAllCaps="true"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serialNoLayout" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/coordinateLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/addStockItemButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>